--- a/ex1/report/report.tex
+++ b/ex1/report/report.tex
@@ -89,11 +89,21 @@ The most obvious thing to comment is that the system is unstable.
 
 \section*{Problem 3}
 \subsection*{a}
+The plot of omega seems pretty much the same. Dymola gives a much more flexible user experience than matlab.
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.8\textwidth]{DymolaRotationalSpeed.eps}
 \caption{Rotational speed of last load in dymola}
 \end{figure}
+
+\subsection*{c}
+The bode plots seems identical.
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.8\textwidth]{dymolaBode.eps}
+\caption{Bode plot done with dymola}
+\end{figure}
+
 
 
 \end{document}
