Did ex4 problem 2a

--- a/ex4/report/report.tex
+++ b/ex4/report/report.tex
@@ -54,6 +54,17 @@ and
 \[b_2K = \frac{1}{2}\]
 is needed for it to be of order 2.
 
+\section*{Problem 2}
+\subsection*{a}
+There is no damping here, therefore eulers method wont be stable.
+\begin{figure}[H]
+\centering
+\includegraphics[width=.8\textwidth]{2a.eps}
+\caption{Eulers method on maginaly stable system}
+\end{figure}
+
+
+
 \section*{Problem 3}
 The dc motor system is given by:
 \begin{eqnarray*}
