Did ex4 problem 2b

--- a/ex4/report/report.tex
+++ b/ex4/report/report.tex
@@ -63,6 +63,14 @@ There is no damping here, therefore eulers method wont be stable.
 \caption{Eulers method on maginaly stable system}
 \end{figure}
 
+\subsection*{b}
+Now the simulation is stable but introduce damping such that the amplitude decreases over time.
+\begin{figure}[H]
+\centering
+\includegraphics[width=.8\textwidth]{2b.eps}
+\caption{Eulers method on maginaly stable system}
+\end{figure}
+
 
 
 \section*{Problem 3}
