did ex4 problem 2d

--- a/ex4/report/report.tex
+++ b/ex4/report/report.tex
@@ -68,9 +68,24 @@ Now the simulation is stable but introduce damping such that the amplitude decre
 \begin{figure}[H]
 \centering
 \includegraphics[width=.8\textwidth]{2b.eps}
-\caption{Eulers method on maginaly stable system}
+\caption{Eulers implicit method on maginaly stable system}
 \end{figure}
 
+\subsection*{c}
+Now everything seems to be physically correct.
+\begin{figure}[H]
+\centering
+\includegraphics[width=.8\textwidth]{2c.eps}
+\caption{Implicit midpoint rule on maginaly stable system}
+\end{figure}
+
+\subsection*{d}
+Energy plotted for different solutions
+\begin{figure}[H]
+\centering
+\includegraphics[width=.8\textwidth]{2d.eps}
+\caption{Energy}
+\end{figure}
 
 
 \section*{Problem 3}
