--- a/ex4/report/report.tex
+++ b/ex4/report/report.tex
@@ -117,5 +117,12 @@ and
 \end{eqnarray*}
 hence passive
 
+\subsection*{c}
+A feedback connection that asure stability is:
+\begin{eqnarray*}
+u_a &= - R_a i_{ad} - K_E \omega_{md} k K_{P1}{i_a - i_{ad}} \\
+T_L &= K_T i_{ad} - K_{P2}(\omega_m - \omega{md})
+\end{eqnarray*}
+
 
 \end{document}
