Ex5 problem 1c done as well

--- a/ex5/report/report.tex
+++ b/ex5/report/report.tex
@@ -28,10 +28,14 @@
 \section*{Problem 1}
 \subsection*{a}
 For a Spool (like spool 2) where $T$, $F$ and $\omega$ is in the same direction.
-\[\sum \tau = J \alpha = J \dot{\omega}} = T + F_i r + B_i \omega \]
+\[\sum \tau = J \alpha = J \dot{\omega} = T + F_i r + B_i \omega \]
 The sign can be changed to accomodate for differant directions.
 
-\subsection*{b}
+\subsection*{c}
+If we call the contraction of the spring $x$ such that $v_2 - v_1 = \dot{x}$. Since everything in this system is massless the force equilibrium will be:
+\[ F_2 - F_1 = K x^2 + B \dot{x} \]
+Or equivalently
+\[ \dot{x} = \frac{-K x^2}{B} + \frac{F_2 - F_1}{B} \]
 
 
 \end{document}
