Also did ex5 problem 1d

--- a/ex5/report/report.tex
+++ b/ex5/report/report.tex
@@ -37,5 +37,18 @@ If we call the contraction of the spring $x$ such that $v_2 - v_1 = \dot{x}$. Si
 Or equivalently
 \[ \dot{x} = \frac{-K x^2}{B} + \frac{F_2 - F_1}{B} \]
 
+\subsection*{d}
+Force balance in horizontal direction:
+\[F_1 \sin{\theta} - F_2 \sin{\theta} = 0\]
+Which means:
+\[F_1 = F_2 = F \]
+Vertical direction:
+\[ F_1 \cos{\theta} + F_2 \cos{\theta} = F_k \]
+which means:
+\[ F_k = 2 F \cos{\theta} \]
+inserting into power balance gives:
+\[\dot{x_k} = \frac{1}{2 \cos{\theta}} (v_1 - v_2)\]
+
+
 
 \end{document}
