Did the rest of ex5

--- a/ex5/report/report.tex
+++ b/ex5/report/report.tex
@@ -49,6 +49,13 @@ which means:
 inserting into power balance gives:
 \[\dot{x_k} = \frac{1}{2 \cos{\theta}} (v_1 - v_2)\]
 
-
+\subsection*{g}
+The bode looks like shown in Figure \ref{fig:bode}
+\begin{figure}[h]
+\centering
+\includegraphics[width=.8\textwidth]{bode.eps}
+\caption{Bode plot of drive/pulley system}
+\label{fig:bode}
+\end{figure}
 
 \end{document}
