--- a/ex6/report/report.tex
+++ b/ex6/report/report.tex
@@ -161,5 +161,65 @@ Since $\lim_{\lambda \rightarrow \inf} \abs{R} \not = 0$ the method is not L sta
 \subsection*{a}
 This is an implicit method because $A$ is not a lower triangular matrix.
 
+\subsection*{b}
+\[A = \begin{bmatrix}
+3 & -3 \\
+3 & 5
+\end{bmatrix} 
+\]
+\[I - h \lambda A = \frac{1}{12} \begin{bmatrix}
+12 - 3 \lambda h & 3 \lambda h \\
+- 3 \lambda h & 12 - 5 \lambda h
+\end{bmatrix}
+\]
+\begin{eqnarray*}
+(I - h \lambda A)^{-1} &=& \frac{12}{(12 - 3 \lambda h)(12 - 5 \lambda h) + 9 (\lambda h)^2} \begin{bmatrix}
+12 - 5 \lambda h & - 3 \lambda h \\
+3 \lambda h & 12 - 3 \lambda h
+\end{bmatrix} \\
+&=& \frac{12}{144 - 96 \lambda h + 24 (\lambda h)^2} \begin{bmatrix}
+12 - 5 \lambda h & - 3 \lambda h \\
+3 \lambda h & 12 - 3 \lambda h
+\end{bmatrix} \\
+&=& \frac{1}{12 - 8 \lambda h + 2 (\lambda h)^2} \begin{bmatrix}
+12 - 5 \lambda h & - 3 \lambda h \\
+3 \lambda h & 12 - 3 \lambda h
+\end{bmatrix}
+\end{eqnarray*}
+\[B = \begin{bmatrix}
+\frac{1}{4} \\
+\frac{3}{4}
+\end{bmatrix} \]
+Since it's an implicit RK method. The stability function is given by:
+\begin{eqnarray*}
+R &=& 1 + \lambda h \mathbf{b}^t (1 - \lambda h \mathbf{A})^{-1} \mathbf{1} \\
+&=& 1 + \lambda h \begin{bmatrix}
+\frac{1}{4} & \frac{3}{4} 
+\end{bmatrix}
+\frac{1}{12 - 8 \lambda h + 2 (\lambda h)^2} 
+\begin{bmatrix}
+12 - 5 \lambda h & - 3 \lambda h \\
+3 \lambda h & 12 - 3 \lambda h
+\end{bmatrix}
+\begin{bmatrix} 1 \\ 1 \end{bmatrix} \\
+&=& 1 + \frac{1}{12 - 8 \lambda h + 2 (\lambda h)^2}
+\begin{bmatrix}
+\frac{1}{4} & \frac{3}{4} 
+\end{bmatrix}
+\begin{bmatrix}
+12 - 8 \lambda h \\ 12
+\end{bmatrix} \\
+&=& 1 + \frac{1}{24 - 16 \lambda h + 4 (\lambda h)^2}(6 - 4 \lambda h + 18) \\
+&=& 1 + \frac{24 - 4 \lambda h}{24 - 16 \lambda h + 4 (\lambda h)^2} \\
+&=& \frac{24 + 8 \lambda h}{24 - 16 \lambda h + 4 (\lambda h)^2} \\
+&=& \frac{1 + \frac{1}{3} \lambda h}{1 - \frac{2}{3} \lambda h + (\frac{1}{6} \lambda h)^2}
+\end{eqnarray*}
+Which is the same function as the Padé-approximation $P^1_2(h \lambda)$
+
+\subsection*{c}
+Since the stability function is on the form $P^k_m$ where $m = k + 1$ we know that this function is L-stable.
+
+              
+
 
 \end{document}
