did problem 1c in ex 9

--- a/ex9/report/report.tex
+++ b/ex9/report/report.tex
@@ -72,4 +72,9 @@ The rotation matrix for the z-axis is
 \]
 Seeing that $\mathbf{R}_z(30\degree) = \mathbf{R}_b^a$, meaning that $\mathbf{R}_b^a$ is a $30\degree$ rotation about the z-axis
 
+\subsection*{c}
+$\mathbf{R}_a^b$ is the rotation matrix that rotate $-30\degree$ about the z-axis. Since $\mathbf{x} = \mathbf{R}_a^b \mathbf{R}_b^a \mathbf{x} = \mathbf{R}_b^a \mathbf{R}_a^b \mathbf{x}$. We also know that $\mathbf{R}_a^b = (\mathbf{R}_b^a)^{-1} = (\mathbf{R}_b^a)^{T}$.
+
+\subsection*{d}
+
 \end{document}
