did problem 1d in ex 9

--- a/ex9/report/report.tex
+++ b/ex9/report/report.tex
@@ -76,5 +76,22 @@ Seeing that $\mathbf{R}_z(30\degree) = \mathbf{R}_b^a$, meaning that $\mathbf{R}
 $\mathbf{R}_a^b$ is the rotation matrix that rotate $-30\degree$ about the z-axis. Since $\mathbf{x} = \mathbf{R}_a^b \mathbf{R}_b^a \mathbf{x} = \mathbf{R}_b^a \mathbf{R}_a^b \mathbf{x}$. We also know that $\mathbf{R}_a^b = (\mathbf{R}_b^a)^{-1} = (\mathbf{R}_b^a)^{T}$.
 
 \subsection*{d}
+\[\mathbf{u}^a = \mathbf{R}_b^a \mathbf{u}^b = \begin{bmatrix}
+\frac{1}{2} \sqrt{3} - 1 \\
+\frac{1}{2} + \sqrt{3} \\
+3
+\end{bmatrix}
+\]
+
+\[\mathbf{w}^b = \mathbf{R}_a^b \mathbf{w}^a = \begin{bmatrix}
+\frac{1}{2} \sqrt{3} - \frac{1}{2} \\
+-\frac{1}{2} - \frac{1}{2} \sqrt{3} \\
+2
+\end{bmatrix}
+\]
+
+\subsection*{e}
+
+
 
 \end{document}
