did problem 1g in ex 9

--- a/ex9/report/report.tex
+++ b/ex9/report/report.tex
@@ -140,5 +140,36 @@ c\psi c\theta & s\psi s\theta s\phi + c\psi c\phi &   c\psi s\theta c\phi - s\ps
 - s\theta & c\theta s\phi & c\theta c\phi
 \end{bmatrix}
 \end{eqnarray*}
+\subsection*{g}
+\subsubsection*{1}
+It's easy to see that 
+\[\mathbf{R}_1 = \begin{bmatrix}
+-1 & 0 & 0 \\
+0 & -1 & 0 \\
+0 & 0 & 1
+\end{bmatrix}
+\]
+Since then $\det{\mathbf{R}_1} = 1$ and $\mathbf{R}_1 \mathbf{R}_1 = \mathbf{I}$. And it's obvious a 3 by 3 matrix.
+
+\subsubsection*{2}
+It's easy to see that 
+\[\mathbf{R}_2 = \begin{bmatrix}
+0 & 1 & 0 \\
+-1 & 0 & 0 \\
+0 & 0 & 1
+\end{bmatrix}
+\]
+Since then $\det{\mathbf{R}_2} = 1$ and $\mathbf{R}_2 \mathbf{R}_2 = \mathbf{I}$. And it's obvious a 3 by 3 matrix.
+
+\subsubsection*{3}
+To find $\mathbf{R}_3$ one need to solve the set of equations:
+\begin{eqnarray*}
+\det{\mathbf{R}_3} = 1 \\
+\mathbf{R}_3 \mathbf{R}_3^T = \mathbf{I}
+\end{eqnarray*}
+Since it's obviously a 3 by 3 matrix.
+
+\section*{Problem 2}
+\subsection*{a}
 
 \end{document}
