--- a/ex9/report/report.tex
+++ b/ex9/report/report.tex
@@ -6,7 +6,7 @@
 \usepackage{gensymb}
 \usepackage{graphicx, float}
 \usepackage{pstricks-add}
-
+\usepackage{listings}
 
 \author{Kjetil Kjeka}
 \title{TTK4130 - Exercise 9}
@@ -416,6 +416,33 @@ r_{21} - r_{12}
 
 
 \subsection*{c}
+Both the direction of the axis and the angle will be reversed such that the rotation will be the same.
+
+\subsection*{d}
+The code
+\begin{lstlisting}[language=Matlab,breaklines=true]
+R = [0.2133, -0.2915, 0.9325; 0.9209, -0.2588, -0.2915; 0.3263, 0.9209, 0.2133];
+
+theta = acos((R(1,1) + R(2,2) + R(3,3) - 1)/2);
+e = 1/2 * [R(3,2) - R(2,3);R(1,3) - R(3,1);R(2,1) - R(1,2)];
+k = e ./ sin(theta);
+    
+theta
+k
+\end{lstlisting}
+Produce the result
+\begin{lstlisting}
+theta =
+
+    1.9999
+
+
+k =
+
+    0.6667
+    0.3333
+    0.6667
+\end{lstlisting}
 
 
 \end{document}
